--- a/app/client/css/main.css
+++ b/app/client/css/main.css
@@ -77,21 +77,22 @@ span.lang {
 }
 
 .section-title {
-  text-align: right;
+  text-align: center;
   color: #999;
+}
+.section-title p {
+  margin-bottom: 0.2em
 }
 
 .phase-navigations {
   color: #ccc;
   text-align: center;
-  margin: 1em 0;
-  padding: 1em;
+  margin: 0;
+  padding: 0.2em 0 1em 0;
   border-top: 1px solid #eee;
 }
-
-.phase-navigations .previous:before {
-  content: "« ";
-}
-.phase-navigations .next:after {
-  content: " »";
+.phase-navigation {
+  display: inline-block;
+  padding: 0 0.2em;
+  margin: 0 1em;
 }
