Hide default audio control

--- a/app/client/css/main.css
+++ b/app/client/css/main.css
@@ -112,9 +112,7 @@ span.antonyms {
 }
 
 .audio {
-  text-align: center;
-  padding: 1em 0;
-  margin: auto;
+  display: none;
 }
 
 .section-title {
